--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "feed"]
 	path = feed
 	url = https://github.com/snaptortoise/jekyll-rss-feeds.git
+[submodule "_site"]
+	path = _site
+	url = ../blog_site/
