--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 paginate: 5
 pygments: true
 permalink: pretty
-markdown: rdiscount
+markdown: pandoc
 lsi: true
-rdiscount:
-  extensions: [smart]
+pandoc:
+  extensions: [smart, mathjax]
 exclude: [Makefile]
